2007-05-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.insert): 
	* tests/test_ObjectList.py (MethodTest.testInsert): 
	Implement, add tests.

2007-05-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: (Masks): It was possible to move the cursor outside
	the editable fields sometimes. Fixes #3333
	* tests/test_masks.py: some tests for this case.

2007-04-30  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add an expander property to the Column.
	Fixes #3336

2007-04-26  Johan Dahlin  <jdahlin@async.com.br>

	* examples/entrymask.py: Add a new example

	* kiwi/__init__.py: Add an explicit version check
	and give up if the version is too old.

2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/ui/search.py:

	Add auto_search mode, which is enabled by default.
	Add optional columns, callback parameters to add_filter,
	to make it easier to integrate with the query executer.
	Add a generic query callback to the SQLObject executer.
	Use new api in example.

	* kiwi/ui/search.py:
	(DateSearchFilter._update_dates): When switching to a custom
	day, always set both to today.
	When switching to a custom interval, always use today and tomorrow.

2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (DateSearchFilter.select): Add and reorganize
	internals a bit to be able to select by option_type.

2007-04-25  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.grab_focus): 
	Add, fixes #3326

2007-04-20  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py: Add an example.
	* kiwi/ui/search.py (DateSearchFilter): Make sure that you cannot
	select a start date after the end date and an end date before the 