@@ -1,3 +1,13 @@
+2007-05-04  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py:
+	* tests/test_ObjectList.py:
+	Objectlist does not set a radio column value to true if
+	all values are false.
+	Fixes #3339
+
 2007-05-03  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/objectlist.py (ObjectList.insert): 
